--- a/contrib/macdeploy/fancy.plist
+++ b/contrib/macdeploy/fancy.plist
@@ -22,7 +22,7 @@
 			<integer>370</integer>
 			<integer>156</integer>
 		</array>
-		<key>Frozen-Qt.app</key>
+		<key>Platinum-Qt.app</key>
 		<array>
 			<integer>128</integer>
 			<integer>156</integer>
